//Copyright 2019 iwanvi.com All right reserved.
syntax = "proto2";

package com.iwanvi.minerva.proto;

import "common.proto";

option java_package = "com.iwanvi.nvwa.proto";
option java_outer_classname = "AdModelsProto";

message AdPositionFloorPrice {
    optional uint32 industry = 1;       //广告主行业
    optional string ad_position_id = 2; //广告位uuid
    optional uint32 area_level_id = 3;   //地域等级id
    optional double floor_price = 5;     //广告位底价
    map<string,string> ext = 4;
    optional uint32 id = 6;
}

message AreaLevel{
    optional uint32 id = 1;        //地域等级定义id
    repeated uint32 area_codes = 2; //地域码
    optional string name = 3; //地域等级名称
}

message CompetingProduct {
    optional string keyword = 1; //竞品关键字
}

message Dsp {
    optional string dsp_id = 1; //dsp平台id
    optional uint32 qps = 2;    //dsp平台qps
    optional bool status = 3;   //dsp平台状态，0-关闭，1-正常
    optional string rtb_url = 4; //dsp平台竞价地址
    optional string token = 6;   //dsp平台密钥，用来加密解密价格
    optional string source = 12; //dsp平台标识， 用来在sdk展示广告的时候标识广告来源
    
    //平台流量定向
    optional DspTarget dsp_target = 5;
    //是否标准协议 
    optional bool is_standard_protocol = 7;
    optional bool is_fixed_price = 8; //是否固定价格售卖
    
    repeated DspAdPositionPrice dsp_ad_position_price = 9;
    optional bool is_test = 10; //是否处于测试状态
    optional AuditType audit_type = 11 [default=PRE_AUDIT];
    
    
    message DspAdPositionPrice {
        optional string tagid = 1; //广告位id
        optional uint32 price = 2; //售卖价格
    }
    
    enum AuditType {
        PRE_AUDIT = 1; //先审后投
        POST_AUDIT = 2; //先投后审
        NO_AUDIT = 3; //免审
    }
}

message DspTarget {
    repeated AdPositionTarget ad_pos_targets = 1;
    repeated BookCategoryTarget book_category_targets = 2;
    repeated AreaTarget area_targets = 3;
    optional ChannelTarget channel_target = 4;
    optional DeviceTarget device_target = 5;
}

message ChannelTarget {
    repeated string channel_ids = 1;
}

message BookCategoryTarget {
    repeated string category_ids = 1;
}

message AdPositionTarget {
    //操作系统
    optional string os = 1;
    //广告位id列表
    repeated string tagids = 2;
}

message DspAdvertiser {
    required string advertiser_id = 1; //广告主id(非dsp平台广告主id)
    optional uint32 status = 2; //dsp平台广告主状态,0-无效;1-有效
}

message DspCreative {
    required string creative_id = 1;   //dsp平台创意id
    optional string creative_url = 2;  //dsp创意url
    optional string landing_page = 3;  //广告落地页地址
    optional string advertiser_id = 4; //创意对应广告主id(非dsp平台广告主id)
    optional string creative_type = 5; //广告类型
    
    //原生广告相关内容
    optional string title = 6;  //原生广告title
    optional string icon = 7;   //用户头像icon
    optional string desc = 8;   //广告描述
    optional string ctatext = 14; //按钮文本
    
    repeated string images = 9;  //原生广告图片组
    optional uint32 industry = 11; //创意所属广告主行业
    optional uint32 status = 10;
    optional string dsp_id = 12; //dsp id
    optional uint32 id = 13; //平台自身创意id
}

message Agent {
	optional uint32 agent_id = 1;
	optional string agent_uuid = 2;
	optional AgentType agent_type = 3; //代理商类型
	optional double profit_margin = 4 [default=0.2]; //利润率
	optional uint32 status = 5; 
}

//代理商框架价格配置
message AgentFloorPriceConfig {
	optional uint32 agent_id =1; //代理商id
	optional uint32 industry_id = 2; //行业id
	optional string media_uuid = 3; //媒体uuid
	optional uint32 ad_pos_id = 4; //广告位id
	optional uint32 floor_price = 5; //底价
	optional OSType os = 6; //操作系统
	optional uint32 area_level_id = 7; //地域等级id
	optional double profit_margin = 8; //利润率
}

message Advertiser {
    optional uint32 advertiser_id = 1;
    optional uint32 status = 2;
    optional string advertiser_uuid = 3;
    optional double adx_bid_discount = 4;   //ADX竞价系数,优先使用广告主设定，其次使用AdCommonConfig中的
    optional double adx_pay_discount = 5;   //adx扣费系数
    optional string agent_uuid = 6;         //代理商uuid
    optional uint32 industry_id = 7;        //行业id
    optional uint32 agent_id = 8;           //代理商id
}

message AdPlan {
    optional uint32 advertiser_id = 1;
    optional uint32 plan_id = 2;
    optional uint32 status = 3;
    optional DeliveryMode delivery_mode = 4;
}

message TimeTarget {
    optional uint64 begin_time = 1[default=0]; // 时间定向开始时间，单位为秒，unix时间
    optional uint64 end_time = 2;   // 时间定向结束时间
    optional uint64 half_hours = 3; // 每天半小时定向,从低位开始
}

message AreaTarget {
    repeated uint32 area_code = 1;  // 定向的地域编码,如果全国投放填0
}

message AgeTarget {
    repeated AgeInterval age_interval = 1;
    message AgeInterval {
        optional uint32 begin_age = 1;
        optional uint32 end_age = 2;
    }
}

message ConnectTypeTarget {
    repeated ConnectType connect_type = 1;
}

message CarrierTarget {
    repeated Carrier carrier = 1;
}

message GenderTarget {
    repeated GenderType gender = 1;
}

message OsTarget {
    repeated OSType os = 1;
}

message AdxTarget {
    repeated AdxType adx_type = 1;         // 等全量之后废弃
    repeated AdxInfo adx_info = 2;
}

// 流量来源定向
message TrafficTarget {
    repeated TrafficType traffic = 1;
}

message TerminalTarget {
    repeated TerminalType terminal = 1;
}

message MediaTarget {
    repeated string media_uuid = 1;
}

message BehaviorTarget {
    repeated uint32 behavior = 1;
}

message DeviceTarget {
    repeated string did = 1;
    optional string did_file_url = 2;
}

// 所有定向，如果不限制，则该字段不填写, 表示通投
message AdUnit {
    optional uint32 advertiser_id = 1;
    optional uint32 plan_id = 2;
    optional uint32 unit_id = 3;
    repeated Creative creatives = 4;
    optional uint32 status = 5;
    optional TimeTarget time_target = 6;                // 时间定向
    optional AreaTarget area_target = 7;                // 地域投放
    optional AgeTarget age_target = 8;                  // 年龄定向
    optional ConnectTypeTarget connect_type_target = 9;// 链接方式定向
    optional CarrierTarget carrier_target = 10;         // 运营商定向
    optional GenderTarget gender_target = 11;           // 性别定向
    optional OsTarget os_target = 12;                   // 操作系统定向
    optional ExtensionType extension_type = 13;         //推广类型
    optional CostType cost_type = 14 [default = kCpc];  //付费类型
    optional TrafficTarget traffic_target = 15;         // 流量来源定向
    optional TerminalTarget terminal_target = 16;       // 终端定向
    optional MediaTarget media_target = 17;         // 媒体定向 主要人工干预
    optional BillingMode billing_mode = 18 [default = kGspBillingMode];//计费模式
    optional BehaviorTarget behavior_target = 19;
	//optional TastesTarget tastes_target = 20;  //兴趣爱好定向
	//optional AudienceTarget audience_target = 40;  //受众定向
	optional DeviceTarget device_target = 43; //设备定向，用来客户定向刷广告使用
	
	optional uint32 height = 21; //广告位高
	optional uint32 width = 22; //广告位宽
	optional uint32 duration = 23; //广告时长
	optional CreativeType creative_type = 24; //广告创意类型
	optional string adx_ad_type_id = 25; //将创意的adx_ad_type_id提到单元上
	
	optional uint32 cpc = 26; //广告出价
	optional string land_url = 27; //广告落地页
	optional string pkg_name = 28; //应用包名
	optional string ext_creative_id = 29;  //第三方创意id
	optional uint32 ad_type_id = 30; //广告位id
	repeated MapEntry ext_targets = 31;
	optional DeliveryMode delivery_mode = 32; //投放方式：匀速/默认
	optional uint32 limit = 33; //单元限额
	optional uint32 time_slots = 34; //定向时间段
	repeated uint32 delivery_hours = 35; //投放具体时间段
	optional FrequencyCapping frequency_capping = 36;
	repeated int64 reverse_index = 37;  //单元倒排索引
	optional CPACapping cpa_capping = 38; //cpa限制
	optional bool invalid_device_filtering = 39; //是否过滤非法设备id
	optional Pmp pmp = 41; //pmp
	optional bool use_media_ip = 42; //是否使用媒体ip库
	//optional OttScreenTarget ottScreenTarget = 44; //大屏定向
	//optional Retarget retarget = 45; //重定向
	
	//optional OrderPutTarget order_put_target = 46;
	optional uint32 put_level = 46;
	optional uint32 put_weight = 47;
	optional PutType putType = 48; //投放类型
}

message Creative {
    optional uint32 unit_id = 1;
    optional uint32 creative_id = 2;
    optional uint32 status = 3;
    optional CreativeType creative_type = 4;  // 必须填写
    optional uint32 height=5;         //高
    optional uint32 width=6;          //宽
    optional bytes title = 7;         // 展示文字标题
    optional string pic_url = 8;      // 图片url
    optional string land_url = 9;     // 跳转url
    optional uint32 cpc = 10;          // 点击价格，单位分
    optional string pkg_name = 11;     // 应用包名(Android)
    optional bytes description = 12;         // 展示文字描述
    optional uint32 duration = 13;         // 时长，单位秒
    optional AdxTarget adx_target = 14;    //审核通过的ADX列表
    optional uint32 ad_type_id = 15;      //广告类型id
    optional string snk_creative_id = 16; //snk creative's id
    optional string snk_appkey = 17;      //snk appkey
    optional NativeAd native_ad = 18;     //原生广告实体
    optional string adx_ad_type_id = 19;
	repeated string imp_monitor_url = 20; //第三方曝光监测地址
	repeated string click_monitor_url = 21; //第三方点击监测地址
}

message AdTypeConfig {
    optional uint32 ad_type_id = 1;
    optional double default_ctr = 2;   //默认点击率配置 cpc转cpm时的ctr
    repeated AdxConfig adx_conf = 3;   //ADX相关配置
    optional uint32 status = 4;  //广告位状态
    optional uint32 bidfloor = 5;  //广告位底价
    optional AdPositionType ad_position_type = 6; //广告位类型, CPC/CPM
    
    message AdxConfig{
        optional AdxType adx_type = 1;
        optional double ctr = 2;           // cpc转cpm时的ctr
    }
}

//媒体应用
message App {
    optional string app_id = 1; //应用id
    optional double sharing = 2; //分成系数
    optional uint32 status = 3; //ssp媒体状态
    
    repeated AppMapping app_mapping = 4;
    
    message AppMapping {
        optional string dspid = 1;
        optional string dsp_appid = 2;
    }
}

message SspAdPosition {
    optional string ad_pos_id = 1;
    optional uint32 status = 2;
    optional uint32 bidfloor = 3;
    repeated string template_id = 5; //广告位关联模板id
    
    //广告平台广告位映射
    repeated AdPositionMapping ad_position_mappings = 4;
    optional CreativeType ad_type = 6; //广告形式
    
    message AdPositionMapping {
    	//dsp平台id
        optional string dsp_id = 1; 
        //dsp平台广告位id
        optional string dsp_ad_position_id = 2;
        optional uint32 width = 3; //广告位的宽高
        optional uint32 height = 4;
        optional string template_id = 5;
         //素材类型：单图=1；组图=2；视频=3
        optional uint32 creative_style = 6; //这个字段头条专用
        optional CreativeType dsp_ad_type = 7; //dsp平台广告类型
        optional float dsp_floor=8; // dsp 广告位底价
    }
}

message AdCommonConfig {
    optional double adx_bid_discount = 1;   //默认ADX竞价系数
}

message NativeAd {
    optional string user_name = 1;
    optional string thread_title = 2;
    optional string thread_pic = 3;
    optional string thread_pic1 = 4;
    optional string thread_pic2 = 5;
    optional string thread_pic3 = 6;
    optional string thread_content = 7;
    optional string thread_url_text = 8;
    optional string recommend_name = 9;
    optional string recommend_link = 10;
    optional string custom_css = 11;
    optional string user_portrait = 12;
    optional string pop_window_text = 13;
    optional string button_text = 14;
    optional string label_title = 15;
    optional uint32 label_visible = 16;
    optional string goods_style = 17;
    optional string thread_btn_text = 18;
    optional string template_id = 19; //原生广告模板
}

message PubRecord {
    optional EntityType entity_type = 1;
    optional bytes data = 2;
}

message SBDStat {
    optional uint32 unit_id = 1;
    optional uint32 bidding_count = 2;
    optional uint32 imp_count = 3;
    repeated uint32 delivery_hours = 4; //投放具体时间，比如2点、4点
}
